--- a/MChat_vue/.gitignore
+++ b/MChat_vue/.gitignore
@@ -7,6 +7,8 @@ yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
 selenium-debug.log
+package-lock.json
+*.development
 
 # Editor directories and files
 .idea
