--- a/MChat_vue/package.json
+++ b/MChat_vue/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "element-ui": "^2.13.0",
+    "socket.io-client": "^2.3.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue-socket.io": "^3.0.7",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
